fix button text align

--- a/main.css
+++ b/main.css
@@ -23,7 +23,8 @@
 
 .button {
   background-color: grey;
-  font-size: 1.5rem; 
+  font-size: 2.4rem; 
+  padding: 0;
 }
 
 .hidden {
@@ -33,6 +34,6 @@
 
 h4 {
   text-align: center;
-  margin: 10px;
+  margin: 10px;  
 }
 
